--- a/Css/style.css
+++ b/Css/style.css
@@ -164,7 +164,7 @@ background-color: white;}
     width: 32%;
 
     height: 100%;
-    border-right: 25px solid white;
+    /* border-right: 25px solid white; */
 }
 
 .item_one img {
@@ -178,7 +178,7 @@ background-color: white;}
 
     height: 100%;
     float: left;
-    border-right: 25px solid white;
+    /* border-right: 25px solid white; */
 }
 
 .item_two img {
